[package]
name = "umls-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "umls"
path = "src/lib.rs"

[[bin]]
name = "umls"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
clap = { version = "4.2.7", features = ["env", "derive"] }
concat-reader = "0.1.0"
csv = "1.2.1"
error-stack = { version = "0.3.1", features = ["eyre"] }
eyre = "0.6.8"
flate2 = "1.0.26"
fst = { version = "0.4.7", features = ["levenshtein"] }
rayon = "1.7.0"
thiserror = "1.0.40"
zip = "0.6.5"
