[package]
name = "umls"
description = "A library and command line tool for working with the UMLS Metathesaurus"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Imfeld <dimfeld>"]
repository = "https://github.com/dimfeld/umls-rs"

[lib]
name = "umls"
path = "src/lib.rs"

[[bin]]
name = "umls"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
clap = { version = "4.2.7", features = ["env", "derive"] }
concat-reader = "0.1.0"
csv = "1.2.1"
error-stack = { version = "0.3.1", features = ["eyre"] }
eyre = "0.6.8"
flate2 = "1.0.26"
fst = { version = "0.4.7", features = ["levenshtein"] }
rayon = "1.7.0"
regex-automata =  { version = "0.1.9", features = ["transducer"] }
thiserror = "1.0.40"
zip = "0.6.5"
